--- a/Test UI/index.html
+++ b/Test UI/index.html
@@ -98,6 +98,8 @@
     <div class="acceleration">
       <h3>Acceleration</h3>
       <div id="accel" class="data">Ax: --, Ay: --, Az: --</div>
+      <h3>Velocity</h3>
+      <div id="accel" class="data">Vx: --, Vy: --, Vz: --</div>
     </div>
     
     <div class="heart-rate">
@@ -109,8 +111,8 @@
       <img id="streamer" src="./streamer.jpg" />
     </div>
 
-    <div class="imu">
-      <h3>Acceleration</h3>
+    <div class="Tracking">
+      <h3>Tracking</h3>
       <div id="imu" class="data">Y: --, P: --, R: --</div>
       <img src="./rink.png" alt="Rink Layout" />
     </div>
