--- a/Test UI/index.html
+++ b/Test UI/index.html
@@ -99,7 +99,9 @@
       <h3>Acceleration</h3>
       <div id="accel" class="data">Ax: --, Ay: --, Az: --</div>
       <h3>Velocity</h3>
-      <div id="accel" class="data">Vx: --, Vy: --, Vz: --</div>
+      <div id="velo" class="data">Vx: --, Vy: --, Vz: --</div>
+      <h3>Position</h3>
+      <div id="posi" class="data">X: --, Y: --, Z: --</div>
     </div>
     
     <div class="heart-rate">
@@ -111,8 +113,8 @@
       <img id="streamer" src="./streamer.jpg" />
     </div>
 
-    <div class="Tracking">
-      <h3>Tracking</h3>
+    <div class="imu">
+      <h3>IMU</h3>
       <div id="imu" class="data">Y: --, P: --, R: --</div>
       <img src="./rink.png" alt="Rink Layout" />
     </div>
