--- a/Test UI/index.html
+++ b/Test UI/index.html
@@ -68,10 +68,6 @@
       margin-top: 10px;
     }
 
-    #heartbeat {
-      color: red;
-    }
-
     .video-container img {
       max-width: 100%;
       height: auto;
@@ -107,6 +103,8 @@
     <div class="heart-rate">
       <h3>Heart Rate</h3>
       <div id="heartbeat" class="data">BPM: --, Avg BPM: --</div>
+      <h3>Stress</h3>
+      <div id="stress" class="data">Level: --</div>
     </div>
     
     <div class="video-container">
